--- a/starter-code/src/app/my-home-component/my-home-component.component.html
+++ b/starter-code/src/app/my-home-component/my-home-component.component.html
@@ -1,4 +1,5 @@
-<ul *ngFor="let movie of movies">
-    <li><img [src]="movie.poster" alt="" width="200"></li>
-    <li><a [routerLink]="['/movie',movie.id]"> {{movie.title}} </a></li>
-</ul>
+<div *ngFor="let movie of movies" class = "films">
+  <h3>Room: {{movie.room}}</h3>
+  <img [src]="movie.poster" alt="" width="150" height="200">
+  <h5><a [routerLink]="['/movie',movie.id]" (click)= 'showFilm(movie)'> {{movie.title}} </a></h5>
+</div>
