--- a/starter-code/src/app/my-movie-component/my-movie-component.component.html
+++ b/starter-code/src/app/my-movie-component/my-movie-component.component.html
@@ -1,3 +1,6 @@
-<p>
-  my-movie-component works!
-</p>
+
+<button (click)="goToHome()"> home </button>
+<div>
+  This is the page for the movie: {{ moviesid }}
+
+</div>
