--- a/starter-code/src/app/my-movie-component/my-movie-component.component.html
+++ b/starter-code/src/app/my-movie-component/my-movie-component.component.html
@@ -2,5 +2,9 @@
 <button (click)="goToHome()"> home </button>
 <div>
   This is the page for the movie: {{ moviesid }}
-
+<h2>{{list.movies[moviesid-1].title}}</h2>
+<img src="{{list.movies[moviesid-1].poster}}
+" alt="">
+<p>{{list.movies[moviesid-1].synopsis}}
+</p>
 </div>
